--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ django-cors-headers = "^3.6.0"
 djangorestframework = "^3.12.2"
 djangorestframework-simplejwt = "^4.6.0"
 djoser = "^2.1.0"
+python-decouple = "^3.4"
+dj-database-url = "^0.5.0"
+dj-static = "^0.0.6"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
